blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>One customer contract for one plan: its term, annual recurring revenue and renewal date. Created when a new-business deal is won. Renewal and expansion deals point back to it.</description>
    <label>Subscription</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>