blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Arr__c.field-meta.xml
<CustomField>
    <fullName>Arr__c</fullName>
    <description>Annual recurring revenue for this subscription at current prices.</description>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>