blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Auto_renews__c.field-meta.xml
<CustomField>
    <fullName>Auto_renews__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The contract renews by itself unless the customer gives notice.</description>
    <label>Auto-renews</label>
    <type>Checkbox</type>
</CustomField>