blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Billing_frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_frequency__c</fullName>
    <description>How often the customer is invoiced.</description>
    <label>Billing frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>