blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Renewal_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_date__c</fullName>
    <description>Last day of the current term. A renewal deal opens 90 days before it.</description>
    <label>Renewal date</label>
    <type>Date</type>
</CustomField>