blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>First day of the current term.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>