blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Success_owner__c.field-meta.xml
<CustomField>
    <fullName>Success_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer success manager responsible for this customer.</description>
    <label>Success owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Subscriptions Success owner</relationshipLabel>
    <relationshipName>Subscription_Success_owner</relationshipName>
    <type>Lookup</type>
</CustomField>