blueprints/b2b-saas-sales-led/salesforce/force-app/main/default/objects/Subscription__c/fields/Term_months__c.field-meta.xml
<CustomField>
    <fullName>Term_months__c</fullName>
    <description>Length of the current term in months.</description>
    <label>Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>